master/parser.output
Terminals unused in grammar

   TOKEN_WHILE
   TOKEN_UNARY_NEG
   TOKEN_BACKSLASH
   TOKEN_ERROR


Grammar

    0 $accept: program $end

    1 program: decl_list TOKEN_EOF

    2 decl_list: decl decl_list
    3          | %empty

    4 decl: id TOKEN_COLON type TOKEN_SEMICOLON
    5     | id TOKEN_COLON type TOKEN_ASSIGNMENT expr TOKEN_SEMICOLON
    6     | id TOKEN_COLON type TOKEN_ASSIGNMENT TOKEN_L_CURLY stmtList TOKEN_R_CURLY

    7 stmtList: stmt stmtList
    8         | %empty

    9 stmt: TOKEN_IF TOKEN_L_PAREN expr TOKEN_R_PAREN stmt
   10     | TOKEN_IF TOKEN_L_PAREN expr TOKEN_R_PAREN inside TOKEN_ELSE stmt
   11     | TOKEN_FOR TOKEN_L_PAREN opt_expr TOKEN_SEMICOLON opt_expr TOKEN_SEMICOLON opt_expr TOKEN_R_PAREN stmt
   12     | TOKEN_RETURN expr TOKEN_SEMICOLON
   13     | TOKEN_L_CURLY stmtList TOKEN_R_CURLY
   14     | TOKEN_PRINT optionalArgList TOKEN_SEMICOLON
   15     | decl
   16     | expr TOKEN_SEMICOLON

   17 inside: TOKEN_IF TOKEN_L_PAREN expr TOKEN_R_PAREN inside TOKEN_ELSE inside
   18       | TOKEN_FOR TOKEN_L_PAREN opt_expr TOKEN_SEMICOLON opt_expr TOKEN_SEMICOLON opt_expr TOKEN_R_PAREN inside
   19       | TOKEN_RETURN expr TOKEN_SEMICOLON
   20       | TOKEN_L_CURLY stmtList TOKEN_R_CURLY
   21       | TOKEN_PRINT optionalArgList TOKEN_SEMICOLON
   22       | decl
   23       | expr TOKEN_SEMICOLON

   24 type: TOKEN_INTEGER
   25     | TOKEN_BOOLEAN
   26     | TOKEN_CHARACTER
   27     | TOKEN_STRING
   28     | TOKEN_FUNCTION type TOKEN_L_PAREN fDefOpt TOKEN_R_PAREN
   29     | TOKEN_ARRAY TOKEN_L_SUB expr TOKEN_R_SUB type
   30     | TOKEN_ARRAY TOKEN_L_SUB TOKEN_R_SUB type
   31     | TOKEN_VOID

   32 literal: TOKEN_INTEGER_LITERAL
   33        | TOKEN_CHARACTER_LITERAL
   34        | TOKEN_STRING_LITERAL
   35        | TOKEN_L_CURLY arrayLit TOKEN_R_CURLY

   36 arrayLit: expr
   37         | expr TOKEN_COMMA arrayLit

   38 boolean: TOKEN_TRUE
   39        | TOKEN_FALSE

   40 fDefOpt: %empty
   41        | fDef

   42 fDef: id TOKEN_COLON type
   43     | id TOKEN_COLON type TOKEN_COMMA fDef

   44 optionalArgList: %empty
   45                | arrayLit

   46 expr: id TOKEN_ASSIGNMENT expr
   47     | index TOKEN_ASSIGNMENT expr
   48     | expr1

   49 expr1: expr2 TOKEN_LOGIC_OR expr1
   50      | expr2

   51 expr2: expr3 TOKEN_LOGIC_AND expr2
   52      | expr3

   53 expr3: expr4 TOKEN_LT expr3
   54      | expr4 TOKEN_LE expr3
   55      | expr4 TOKEN_GT expr3
   56      | expr4 TOKEN_GE expr3
   57      | expr4 TOKEN_EQUIV expr3
   58      | expr4 TOKEN_NOT_EQUIV expr3
   59      | expr4

   60 expr4: expr5 TOKEN_ADD expr4
   61      | expr5 TOKEN_SUB expr4
   62      | expr5

   63 expr5: expr6 TOKEN_MULT expr5
   64      | expr6 TOKEN_DIVIDE expr5
   65      | expr6 TOKEN_MOD expr5
   66      | expr6

   67 expr6: expr7 TOKEN_EXP expr6
   68      | expr7

   69 expr7: TOKEN_SUB expr7
   70      | TOKEN_LOGIC_NOT expr7
   71      | expr8

   72 expr8: expr9 TOKEN_POST_INC
   73      | expr9 TOKEN_POST_DEC
   74      | expr9

   75 expr9: literal
   76      | TOKEN_L_PAREN expr TOKEN_R_PAREN
   77      | id
   78      | boolean
   79      | index
   80      | id TOKEN_L_PAREN optionalArgList TOKEN_R_PAREN

   81 index: expr9 TOKEN_L_SUB expr TOKEN_R_SUB

   82 id: TOKEN_IDENTIFIER

   83 opt_expr: %empty
   84         | expr


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_EOF (258) 1
TOKEN_ARRAY (259) 29 30
TOKEN_ELSE (260) 10 17
TOKEN_FALSE (261) 39
TOKEN_FOR (262) 11 18
TOKEN_FUNCTION (263) 28
TOKEN_IF (264) 9 10 17
TOKEN_PRINT (265) 14 21
TOKEN_RETURN (266) 12 19
TOKEN_TRUE (267) 38
TOKEN_VOID (268) 31
TOKEN_WHILE (269)
TOKEN_INTEGER (270) 24
TOKEN_BOOLEAN (271) 25
TOKEN_CHARACTER (272) 26
TOKEN_STRING (273) 27
TOKEN_INTEGER_LITERAL (274) 32
TOKEN_CHARACTER_LITERAL (275) 33
TOKEN_STRING_LITERAL (276) 34
TOKEN_IDENTIFIER (277) 82
TOKEN_L_PAREN (278) 9 10 11 17 18 28 76 80
TOKEN_R_PAREN (279) 9 10 11 17 18 28 76 80
TOKEN_L_SUB (280) 29 30 81
TOKEN_R_SUB (281) 29 30 81
TOKEN_POST_INC (282) 72
TOKEN_POST_DEC (283) 73
TOKEN_UNARY_NEG (284)
TOKEN_LOGIC_NOT (285) 70
TOKEN_EXP (286) 67
TOKEN_MULT (287) 63
TOKEN_DIVIDE (288) 64
TOKEN_MOD (289) 65
TOKEN_ADD (290) 60
TOKEN_SUB (291) 61 69
TOKEN_LT (292) 53
TOKEN_LE (293) 54
TOKEN_GT (294) 55
TOKEN_GE (295) 56
TOKEN_EQUIV (296) 57
TOKEN_NOT_EQUIV (297) 58
TOKEN_LOGIC_AND (298) 51
TOKEN_LOGIC_OR (299) 49
TOKEN_ASSIGNMENT (300) 5 6 46 47
TOKEN_SEMICOLON (301) 4 5 11 12 14 16 18 19 21 23
TOKEN_COLON (302) 4 5 6 42 43
TOKEN_COMMA (303) 37 43
TOKEN_L_CURLY (304) 6 13 20 35
TOKEN_R_CURLY (305) 6 13 20 35
TOKEN_BACKSLASH (306)
TOKEN_ERROR (307)


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
program <decl> (54)
    on left: 1, on right: 0
decl_list <decl> (55)
    on left: 2 3, on right: 1 2
decl <decl> (56)
    on left: 4 5 6, on right: 2 15 22
stmtList <stmt> (57)
    on left: 7 8, on right: 6 7 13 20
stmt <stmt> (58)
    on left: 9 10 11 12 13 14 15 16, on right: 7 9 10 11
inside <stmt> (59)
    on left: 17 18 19 20 21 22 23, on right: 10 17 18
type <type> (60)
    on left: 24 25 26 27 28 29 30 31, on right: 4 5 6 28 29 30 42 43
literal <expr> (61)
    on left: 32 33 34 35, on right: 75
arrayLit <expr> (62)
    on left: 36 37, on right: 35 37 45
boolean <expr> (63)
    on left: 38 39, on right: 78
fDefOpt <param_list> (64)
    on left: 40 41, on right: 28
fDef <param_list> (65)
    on left: 42 43, on right: 41 43
optionalArgList <expr> (66)
    on left: 44 45, on right: 14 21 80
expr <expr> (67)
    on left: 46 47 48, on right: 5 9 10 12 16 17 19 23 29 36 37 46
    47 76 81 84
expr1 <expr> (68)
    on left: 49 50, on right: 48 49
expr2 <expr> (69)
    on left: 51 52, on right: 49 50 51
expr3 <expr> (70)
    on left: 53 54 55 56 57 58 59, on right: 51 52 53 54 55 56 57 58
expr4 <expr> (71)
    on left: 60 61 62, on right: 53 54 55 56 57 58 59 60 61
expr5 <expr> (72)
    on left: 63 64 65 66, on right: 60 61 62 63 64 65
expr6 <expr> (73)
    on left: 67 68, on right: 63 64 65 66 67
expr7 <expr> (74)
    on left: 69 70 71, on right: 67 68 69 70
expr8 <expr> (75)
    on left: 72 73 74, on right: 71
expr9 <expr> (76)
    on left: 75 76 77 78 79 80, on right: 72 73 74 81
index <expr> (77)
    on left: 81, on right: 47 79
id <expr> (78)
    on left: 82, on right: 4 5 6 42 43 46 77 80
opt_expr <expr> (79)
    on left: 83 84, on right: 11 18


State 0

    0 $accept: . program $end

    TOKEN_IDENTIFIER  shift, and go to state 1

    $default  reduce using rule 3 (decl_list)

    program    go to state 2
    decl_list  go to state 3
    decl       go to state 4
    id         go to state 5


State 1

   82 id: TOKEN_IDENTIFIER .

    $default  reduce using rule 82 (id)


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: decl_list . TOKEN_EOF

    TOKEN_EOF  shift, and go to state 7


State 4

    2 decl_list: decl . decl_list

    TOKEN_IDENTIFIER  shift, and go to state 1

    $default  reduce using rule 3 (decl_list)

    decl_list  go to state 8
    decl       go to state 4
    id         go to state 5


State 5

    4 decl: id . TOKEN_COLON type TOKEN_SEMICOLON
    5     | id . TOKEN_COLON type TOKEN_ASSIGNMENT expr TOKEN_SEMICOLON
    6     | id . TOKEN_COLON type TOKEN_ASSIGNMENT TOKEN_L_CURLY stmtList TOKEN_R_CURLY

    TOKEN_COLON  shift, and go to state 9


State 6

    0 $accept: program $end .

    $default  accept


State 7

    1 program: decl_list TOKEN_EOF .

    $default  reduce using rule 1 (program)


State 8

    2 decl_list: decl decl_list .

    $default  reduce using rule 2 (decl_list)


State 9

    4 decl: id TOKEN_COLON . type TOKEN_SEMICOLON
    5     | id TOKEN_COLON . type TOKEN_ASSIGNMENT expr TOKEN_SEMICOLON
    6     | id TOKEN_COLON . type TOKEN_ASSIGNMENT TOKEN_L_CURLY stmtList TOKEN_R_CURLY

    TOKEN_ARRAY      shift, and go to state 10
    TOKEN_FUNCTION   shift, and go to state 11
    TOKEN_VOID       shift, and go to state 12
    TOKEN_INTEGER    shift, and go to state 13
    TOKEN_BOOLEAN    shift, and go to state 14
    TOKEN_CHARACTER  shift, and go to state 15
    TOKEN_STRING     shift, and go to state 16

    type  go to state 17


State 10

   29 type: TOKEN_ARRAY . TOKEN_L_SUB expr TOKEN_R_SUB type
   30     | TOKEN_ARRAY . TOKEN_L_SUB TOKEN_R_SUB type

    TOKEN_L_SUB  shift, and go to state 18


State 11

   28 type: TOKEN_FUNCTION . type TOKEN_L_PAREN fDefOpt TOKEN_R_PAREN

    TOKEN_ARRAY      shift, and go to state 10
    TOKEN_FUNCTION   shift, and go to state 11
    TOKEN_VOID       shift, and go to state 12
    TOKEN_INTEGER    shift, and go to state 13
    TOKEN_BOOLEAN    shift, and go to state 14
    TOKEN_CHARACTER  shift, and go to state 15
    TOKEN_STRING     shift, and go to state 16

    type  go to state 19


State 12

   31 type: TOKEN_VOID .

    $default  reduce using rule 31 (type)


State 13

   24 type: TOKEN_INTEGER .

    $default  reduce using rule 24 (type)


State 14

   25 type: TOKEN_BOOLEAN .

    $default  reduce using rule 25 (type)


State 15

   26 type: TOKEN_CHARACTER .

    $default  reduce using rule 26 (type)


State 16

   27 type: TOKEN_STRING .

    $default  reduce using rule 27 (type)


State 17

    4 decl: id TOKEN_COLON type . TOKEN_SEMICOLON
    5     | id TOKEN_COLON type . TOKEN_ASSIGNMENT expr TOKEN_SEMICOLON
    6     | id TOKEN_COLON type . TOKEN_ASSIGNMENT TOKEN_L_CURLY stmtList TOKEN_R_CURLY

    TOKEN_ASSIGNMENT  shift, and go to state 20
    TOKEN_SEMICOLON   shift, and go to state 21


State 18

   29 type: TOKEN_ARRAY TOKEN_L_SUB . expr TOKEN_R_SUB type
   30     | TOKEN_ARRAY TOKEN_L_SUB . TOKEN_R_SUB type

    TOKEN_FALSE              shift, and go to state 22
    TOKEN_TRUE               shift, and go to state 23
    TOKEN_INTEGER_LITERAL    shift, and go to state 24
    TOKEN_CHARACTER_LITERAL  shift, and go to state 25
    TOKEN_STRING_LITERAL     shift, and go to state 26
    TOKEN_IDENTIFIER         shift, and go to state 1
    TOKEN_L_PAREN            shift, and go to state 27
    TOKEN_R_SUB              shift, and go to state 28
    TOKEN_LOGIC_NOT          shift, and go to state 29
    TOKEN_SUB                shift, and go to state 30
    TOKEN_L_CURLY            shift, and go to state 31

    literal  go to state 32
    boolean  go to state 33
    expr     go to state 34
    expr1    go to state 35
    expr2    go to state 36
    expr3    go to state 37
    expr4    go to state 38
    expr5    go to state 39
    expr6    go to state 40
    expr7    go to state 41
    expr8    go to state 42
    expr9    go to state 43
    index    go to state 44
    id       go to state 45


State 19

   28 type: TOKEN_FUNCTION type . TOKEN_L_PAREN fDefOpt TOKEN_R_PAREN

    TOKEN_L_PAREN  shift, and go to state 46


State 20

    5 decl: id TOKEN_COLON type TOKEN_ASSIGNMENT . expr TOKEN_SEMICOLON
    6     | id TOKEN_COLON type TOKEN_ASSIGNMENT . TOKEN_L_CURLY stmtList TOKEN_R_CURLY

    TOKEN_FALSE              shift, and go to state 22
    TOKEN_TRUE               shift, and go to state 23
    TOKEN_INTEGER_LITERAL    shift, and go to state 24
    TOKEN_CHARACTER_LITERAL  shift, and go to state 25
    TOKEN_STRING_LITERAL     shift, and go to state 26
    TOKEN_IDENTIFIER         shift, and go to state 1
    TOKEN_L_PAREN            shift, and go to state 27
    TOKEN_LOGIC_NOT          shift, and go to state 29
    TOKEN_SUB                shift, and go to state 30
    TOKEN_L_CURLY            shift, and go to state 47

    literal  go to state 32
    boolean  go to state 33
    expr     go to state 48
    expr1    go to state 35
    expr2    go to state 36
    expr3    go to state 37
    expr4    go to state 38
    expr5    go to state 39
    expr6    go to state 40
    expr7    go to state 41
    expr8    go to state 42
    expr9    go to state 43
    index    go to state 44
    id       go to state 45


State 21

    4 decl: id TOKEN_COLON type TOKEN_SEMICOLON .

    $default  reduce using rule 4 (decl)


State 22

   39 boolean: TOKEN_FALSE .

    $default  reduce using rule 39 (boolean)


State 23

   38 boolean: TOKEN_TRUE .

    $default  reduce using rule 38 (boolean)


State 24

   32 literal: TOKEN_INTEGER_LITERAL .

    $default  reduce using rule 32 (literal)


State 25

   33 literal: TOKEN_CHARACTER_LITERAL .

    $default  reduce using rule 33 (literal)


State 26

   34 literal: TOKEN_STRING_LITERAL .

    $default  reduce using rule 34 (literal)


State 27

   76 expr9: TOKEN_L_PAREN . expr TOKEN_R_PAREN

    TOKEN_FALSE              shift, and go to state 22
    TOKEN_TRUE               shift, and go to state 23
    TOKEN_INTEGER_LITERAL    shift, and go to state 24
    TOKEN_CHARACTER_LITERAL  shift, and go to state 25
    TOKEN_STRING_LITERAL     shift, and go to state 26
    TOKEN_IDENTIFIER         shift, and go to state 1
    TOKEN_L_PAREN            shift, and go to state 27
    TOKEN_LOGIC_NOT          shift, and go to state 29
    TOKEN_SUB                shift, and go to state 30
    TOKEN_L_CURLY            shift, and go to state 31

    literal  go to state 32
    boolean  go to state 33
    expr     go to state 49
    expr1    go to state 35
    expr2    go to state 36
    expr3    go to state 37
    expr4    go to state 38
    expr5    go to state 39
    expr6    go to state 40
    expr7    go to state 41
    expr8    go to state 42
    expr9    go to state 43
    index    go to state 44
    id       go to state 45


State 28

   30 type: TOKEN_ARRAY TOKEN_L_SUB TOKEN_R_SUB . type

    TOKEN_ARRAY      shift, and go to state 10
    TOKEN_FUNCTION   shift, and go to state 11
    TOKEN_VOID       shift, and go to state 12
    TOKEN_INTEGER    shift, and go to state 13
    TOKEN_BOOLEAN    shift, and go to state 14
    TOKEN_CHARACTER  shift, and go to state 15
    TOKEN_STRING     shift, and go to state 16

    type  go to state 50


State 29

   70 expr7: TOKEN_LOGIC_NOT . expr7

    TOKEN_FALSE              shift, and go to state 22
    TOKEN_TRUE               shift, and go to state 23
    TOKEN_INTEGER_LITERAL    shift, and go to state 24
    TOKEN_CHARACTER_LITERAL  shift, and go to state 25
    TOKEN_STRING_LITERAL     shift, and go to state 26
    TOKEN_IDENTIFIER         shift, and go to state 1
    TOKEN_L_PAREN            shift, and go to state 27
    TOKEN_LOGIC_NOT          shift, and go to state 29
    TOKEN_SUB                shift, and go to state 30
    TOKEN_L_CURLY            shift, and go to state 31

    literal  go to state 32
    boolean  go to state 33
    expr7    go to state 51
    expr8    go to state 42
    expr9    go to state 43
    index    go to state 52
    id       go to state 53


State 30

   69 expr7: TOKEN_SUB . expr7

    TOKEN_FALSE              shift, and go to state 22
    TOKEN_TRUE               shift, and go to state 23
    TOKEN_INTEGER_LITERAL    shift, and go to state 24
    TOKEN_CHARACTER_LITERAL  shift, and go to state 25
    TOKEN_STRING_LITERAL     shift, and go to state 26
    TOKEN_IDENTIFIER         shift, and go to state 1
    TOKEN_L_PAREN            shift, and go to state 27
    TOKEN_LOGIC_NOT          shift, and go to state 29
    TOKEN_SUB                shift, and go to state 30
    TOKEN_L_CURLY            shift, and go to state 31

    literal  go to state 32
    boolean  go to state 33
    expr7    go to state 54
    expr8    go to state 42
    expr9    go to state 43
    index    go to state 52
    id       go to state 53


State 31

   35 literal: TOKEN_L_CURLY . arrayLit TOKEN_R_CURLY

    TOKEN_FALSE              shift, and go to state 22
    TOKEN_TRUE               shift, and go to state 23
    TOKEN_INTEGER_LITERAL    shift, and go to state 24
    TOKEN_CHARACTER_LITERAL  shift, and go to state 25
    TOKEN_STRING_LITERAL     shift, and go to state 26
    TOKEN_IDENTIFIER         shift, and go to state 1
    TOKEN_L_PAREN            shift, and go to state 27
    TOKEN_LOGIC_NOT          shift, and go to state 29
    TOKEN_SUB                shift, and go to state 30
    TOKEN_L_CURLY            shift, and go to state 31

    literal   go to state 32
    arrayLit  go to state 55
    boolean   go to state 33
    expr      go to state 56
    expr1     go to state 35
    expr2     go to state 36
    expr3     go to state 37
    expr4     go to state 38
    expr5     go to state 39
    expr6     go to state 40
    expr7     go to state 41
    expr8     go to state 42
    expr9     go to state 43
    index     go to state 44
    id        go to state 45


State 32

   75 expr9: literal .

    $default  reduce using rule 75 (expr9)


State 33

   78 expr9: boolean .

    $default  reduce using rule 78 (expr9)


State 34

   29 type: TOKEN_ARRAY TOKEN_L_SUB expr . TOKEN_R_SUB type

    TOKEN_R_SUB  shift, and go to state 57


State 35

   48 expr: expr1 .

    $default  reduce using rule 48 (expr)


State 36

   49 expr1: expr2 . TOKEN_LOGIC_OR expr1
   50      | expr2 .
